# uj-emcpp-assignments

./: .gitignore  compliers_flags.txt
10_sfinae/: CMakeLists.txt  ex_10_1_sfinae.cpp  ex_10_2_tag_dispatching.cpp  ex_10_3_chrono.cpp  sfinae.h  tag_dispatching.h
11_concepts/: CMakeLists.txt  concepts.cpp  literals.cpp  path_operations.cpp  path_operations.h  test_symlink
12_threads/: CMakeLists.txt  futures_and_promises.cpp  futures_and_promises.h  random.cpp
12_threads/mandelbrot/: ex_11_2_Mandelbrot.cpp
12_threads/texts/: file1.txt  file2.txt  file3.txt
13_metaprogramming/: CMakeLists.txt  ex1_KlasyRekurencyjne.cpp  ex1_compilation_time_functions.h  ex2_constinit.cpp  ex2_power_pascal.h  ex3_IntegerList.cpp  ex3_IntegerList.h
1_copy_&_move_semantics/: MatrixWithLabel.h  main.cpp
2_smart_pointers/: StaticContainer2.h  String.h
3_functional_objects/: Printer.cpp  function_pointers.cpp
5_class_templates/: CMakeLists.txt  ex1_Pair.cpp  ex4_conversion.cpp
6_variadic_templates/: CMakeLists.txt  MultiVector.h  Proxy.h  ex3_Mixins.cpp
7_traits_and_policies/: CMakeLists.txt  Vector.h  VectorPolicy.h  ex_8_1_type_traits.cpp  ex_8_4_Vector_operators.cpp
8_iterators/: Matrix.h  Range.h  ex_7_3_MatrixIterator.cpp
9_stl/: CMakeLists.txt  ex_9_1_stdalgorithms.cpp  ex_9_2_words.cpp  ex_9_3_Trie.cpp  toLowerAlpha.h
class_templates/: CMakeLists.txt  dynamicVector.h  ex2_staticVector.cpp  ex4_conversion.cpp  staticVector.h
copy_&_move_semantics/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixWithLabel.cpp  MatrixWithLabel.h  main.cpp
function_templates/: CMakeLists.txt  ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
functional_objects/: CMakeLists.txt  function_pointers.cpp  lambda_expressions.cpp
iterators/: Filter.h  Matrix.h  Range.h  ex_7_1_Range.cpp
smart_pointers/: CMakeLists.txt  DynamicContainer.h  Ex4_String.cpp  MyString.h  StaticContainer.h
traits_and_policies/: Vector.h  VectorPolicy.h  VectorTraits.h  ex_8_3_Vector_policies.cpp  ex_8_4_Vector_operators.cpp
variadic_templates/: CMakeLists.txt  ex1_variadicFunctions.cpp  ex2_proxy.cpp  ex4_MultiVector.cpp
